--- a/app/templates/shops/index.html.erb
+++ b/app/templates/shops/index.html.erb
@@ -1,3 +1,8 @@
 <div data-controller="hello">
-  <h1>YEHHHH BOIIIIIIII</h1>
+  <h1>All Shops:</h1>
+  <div>
+    <% shops.each do |shop| %>
+    <p><%= shop %></p>
+    <% end %>
+  </div>
 </div>
