--- a/app/templates/shops/new.html.erb
+++ b/app/templates/shops/new.html.erb
@@ -1,2 +1,25 @@
 <h1>Open Your Own Shop!</h1>
 <h3>Enter shop details in the form below:</h3>
+<form action='/shops' method='POST'>
+  <label for='street_number'>Street Number:</label>
+  <br/>
+  <input type='text' id='street_number' name='street_number'>
+  <br/>
+  <label for='street'>Street:</label>
+  <br/>
+  <input type='text' id='street' name='street'>
+  <br/>
+  <label for='city'>City:</label>
+  <br/>
+  <input type='text' id='city' name='city'>
+  <br/>
+  <label for='country'>Country:</label>
+  <br/>
+  <input type='text' id='country' name='country'>
+  <br/>
+  <label for='postcode' id='postcode'>Post / Zip Code:</label>
+  <br/>
+  <input type='text' id='postcode' name='postcode'>
+  <br/>
+  <input type='submit' value='Create'>
+</form>
